welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: ')' expected but ',' found.
	if (false,true) {
                 ^sleepIn:8: error: illegal start of simple expression
	}
        ^